--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.7.7",
     "@nextui-org/react": "1.0.0-beta.11",
     "nanoid": "^4.0.0",
+    "project-notes": "link:",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0"
