--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/utilities": "^3.2.1",
     "@headlessui/react": "^1.7.7",
     "@nextui-org/react": "1.0.0-beta.11",
+    "antd": "^5.1.1",
     "nanoid": "^4.0.0",
     "project-notes": "link:",
     "react": "^18.2.0",
