--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "@dnd-kit/sortable": "^7.0.1",
     "@dnd-kit/utilities": "^3.2.1",
     "@headlessui/react": "^1.7.7",
-    "@nextui-org/react": "1.0.0-beta.11",
     "antd": "^5.1.1",
+    "heroicons": "^2.0.13",
     "nanoid": "^4.0.0",
     "project-notes": "link:",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
