--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "@dnd-kit/core": "^6.0.6",
     "@dnd-kit/sortable": "^7.0.1",
     "@dnd-kit/utilities": "^3.2.1",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
+    "@mui/base": "5.0.0-alpha.112",
     "@mui/material": "^5.11.2",
     "antd": "^5.1.1",
     "nanoid": "^4.0.0",
