--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "@dnd-kit/utilities": "^3.2.1",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
-    "antd": "^5.1.1",
+    "@mui/base": "5.0.0-alpha.112",
     "nanoid": "^4.0.0",
-    "project-notes": "link:",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
