--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@dnd-kit/utilities": "^3.2.1",
     "@headlessui/react": "^1.7.7",
     "@mui/base": "5.0.0-alpha.112",
+    "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-popover": "^1.0.2",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "6.3.0"
   },
   "devDependencies": {
     "@iconify/react": "^4.0.1",
